[KOGITO-1968] Allow milestones to trigger completion (#502)
[KOGITO-1968] Allow milestones to trigger completion