@@ -16,14 +16,11 @@
 
 package org.jbpm.workflow.instance.node;
 
-import static org.jbpm.workflow.instance.impl.DummyEventListener.EMPTY_EVENT_LISTENER;
-
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -47,6 +44,11 @@ import org.kie.api.definition.process.Connection;
 import org.kie.api.definition.process.Node;
 import org.kie.api.definition.process.NodeContainer;
 
+import static org.jbpm.ruleflow.core.Metadata.CUSTOM_ASYNC;
+import static org.jbpm.ruleflow.core.Metadata.IS_FOR_COMPENSATION;
+import static org.jbpm.workflow.instance.impl.DummyEventListener.EMPTY_EVENT_LISTENER;
+import static org.kie.api.runtime.process.ProcessInstance.STATE_ABORTED;
+
 /**
  * Runtime counterpart of a composite node.
  * 
@@ -55,22 +57,22 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
 
     private static final long serialVersionUID = 510l;
 
-    private final List<NodeInstance> nodeInstances = new ArrayList<NodeInstance>();
+    private final List<NodeInstance> nodeInstances = new ArrayList<>();
     
     private int state = ProcessInstance.STATE_ACTIVE;
-    private Map<String, Integer> iterationLevels = new HashMap<String, Integer>();
+    private Map<String, Integer> iterationLevels = new HashMap<>();
     private int currentLevel;
 
     @Override
     public int getLevelForNode(String uniqueID) {
-        if ("true".equalsIgnoreCase(System.getProperty("jbpm.loop.level.disabled"))) {
+        if (Boolean.parseBoolean(System.getProperty("jbpm.loop.level.disabled"))) {
             return 1;
         }
         Integer value = iterationLevels.get(uniqueID);
         if (value == null && currentLevel == 0) {
-           value = new Integer(1);
+           value = Integer.valueOf(1);
         } else if ((value == null && currentLevel > 0) || (value != null && currentLevel > 0 && value > currentLevel)) {
-            value = new Integer(currentLevel);
+            value = Integer.valueOf(currentLevel);
         } else {
             value++;
         }
@@ -79,6 +81,7 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
         return value;
     }
 
+    @Override
     public void setProcessInstance(WorkflowProcessInstance processInstance) {
     	super.setProcessInstance(processInstance);    	
     	registerExternalEventNodeListeners();
@@ -118,16 +121,15 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
         CompositeNode.NodeAndType nodeAndType = getCompositeNode().internalGetLinkedIncomingNode(type);
         if (nodeAndType != null) {
 	        List<Connection> connections = nodeAndType.getNode().getIncomingConnections(nodeAndType.getType());
-	        for (Iterator<Connection> iterator = connections.iterator(); iterator.hasNext(); ) {
-	            Connection connection = iterator.next();
-	            if ((connection.getFrom() instanceof CompositeNode.CompositeNodeStart) &&
-	            		(from == null ||
-	    				((CompositeNode.CompositeNodeStart) connection.getFrom()).getInNode().getId() == from.getNodeId())) {
-	                NodeInstance nodeInstance = getNodeInstance(connection.getFrom());
-	                ((org.jbpm.workflow.instance.NodeInstance) nodeInstance).trigger(null, nodeAndType.getType());
-	                return;
-	            }
-	        }
+            for (Connection connection : connections) {
+                if ((connection.getFrom() instanceof CompositeNode.CompositeNodeStart) &&
+                        (from == null ||
+                                ((CompositeNode.CompositeNodeStart) connection.getFrom()).getInNode().getId() == from.getNodeId())) {
+                    NodeInstance nodeInstance = getNodeInstance(connection.getFrom());
+                    nodeInstance.trigger(null, nodeAndType.getType());
+                    return;
+                }
+            }
         } else {
         	// try to search for start nodes
         	boolean found = false;
@@ -136,7 +138,7 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
         			StartNode startNode = (StartNode) node;
         			if (startNode.getTriggers() == null || startNode.getTriggers().isEmpty()) {
     	                NodeInstance nodeInstance = getNodeInstance(startNode);
-    	                ((org.jbpm.workflow.instance.NodeInstance) nodeInstance)
+    	                nodeInstance
     	                	.trigger(null, null);
     	                found = true;
         			}
@@ -166,8 +168,8 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
         triggerCompleted(outType, cancelRemainingInstances);
         if (cancelRemainingInstances) {
 	        while (!nodeInstances.isEmpty()) {
-	            NodeInstance nodeInstance = (NodeInstance) nodeInstances.get(0);
-	            ((org.jbpm.workflow.instance.NodeInstance) nodeInstance).cancel();
+	            NodeInstance nodeInstance = nodeInstances.get(0);
+	            nodeInstance.cancel();
 	        }
         }
     }
@@ -175,8 +177,8 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
     @Override
     public void cancel() {
         while (!nodeInstances.isEmpty()) {
-            NodeInstance nodeInstance = (NodeInstance) nodeInstances.get(0);
-            ((org.jbpm.workflow.instance.NodeInstance) nodeInstance).cancel();
+            NodeInstance nodeInstance = nodeInstances.get(0);
+            nodeInstance.cancel();
         }
         super.cancel();
     }
@@ -195,18 +197,17 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
     }
 
     public Collection<org.kie.api.runtime.process.NodeInstance> getNodeInstances() {
-        return new ArrayList<org.kie.api.runtime.process.NodeInstance>(getNodeInstances(false));
+        return new ArrayList<>(getNodeInstances(false));
     }
 
     public Collection<NodeInstance> getNodeInstances(boolean recursive) {
         Collection<NodeInstance> result = nodeInstances;
         if (recursive) {
-            result = new ArrayList<NodeInstance>(result);
-            for (Iterator<NodeInstance> iterator = nodeInstances.iterator(); iterator.hasNext(); ) {
-                NodeInstance nodeInstance = iterator.next();
+            result = new ArrayList<>(result);
+            for (NodeInstance nodeInstance : nodeInstances) {
                 if (nodeInstance instanceof NodeInstanceContainer) {
                     result.addAll(((NodeInstanceContainer)
-                		nodeInstance).getNodeInstances(true));
+                            nodeInstance).getNodeInstances(true));
                 }
             }
         }
@@ -232,9 +233,8 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
 	}
 
     public NodeInstance getFirstNodeInstance(final long nodeId) {
-        for ( final Iterator<NodeInstance> iterator = this.nodeInstances.iterator(); iterator.hasNext(); ) {
-            final NodeInstance nodeInstance = iterator.next();
-            if ( nodeInstance.getNodeId() == nodeId && nodeInstance.getLevel() == getCurrentLevel()) {
+        for (final NodeInstance nodeInstance : this.nodeInstances) {
+            if (nodeInstance.getNodeId() == nodeId && nodeInstance.getLevel() == getCurrentLevel()) {
                 return nodeInstance;
             }
         }
@@ -242,46 +242,41 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
     }
 
     public NodeInstance getNodeInstance(final Node node) {
-        // TODO do this cleaner for start / end of composite?
         if (node instanceof CompositeNode.CompositeNodeStart) {
-            CompositeNodeStartInstance nodeInstance = new CompositeNodeStartInstance();
-            nodeInstance.setNodeId(node.getId());
-            nodeInstance.setNodeInstanceContainer(this);
-            nodeInstance.setProcessInstance(getProcessInstance());
-            return nodeInstance;
-        } else if (node instanceof CompositeNode.CompositeNodeEnd) {
-            CompositeNodeEndInstance nodeInstance = new CompositeNodeEndInstance();
-            nodeInstance.setNodeId(node.getId());
-            nodeInstance.setNodeInstanceContainer(this);
-            nodeInstance.setProcessInstance(getProcessInstance());
-            return nodeInstance;
+            return buildCompositeNodeInstance(new CompositeNodeStartInstance(), node);
         }
-        Node actualNode = node;
+        if (node instanceof CompositeNode.CompositeNodeEnd) {
+            return buildCompositeNodeInstance(new CompositeNodeEndInstance(), node);
+        }
 
-        NodeInstanceFactory conf = NodeInstanceFactoryRegistry.getInstance(getProcessInstance().getKnowledgeRuntime().getEnvironment()).getProcessNodeInstanceFactory(actualNode);
+        NodeInstanceFactory conf = NodeInstanceFactoryRegistry.getInstance(getProcessInstance().getKnowledgeRuntime().getEnvironment()).getProcessNodeInstanceFactory(node);
         if (conf == null) {
             throw new IllegalArgumentException("Illegal node type: " + node.getClass());
         }
-        NodeInstanceImpl nodeInstance = (NodeInstanceImpl) conf.getNodeInstance(actualNode, getProcessInstance(), this);
+        NodeInstanceImpl nodeInstance = (NodeInstanceImpl) conf.getNodeInstance(node, getProcessInstance(), this);
         if (nodeInstance == null) {
             throw new IllegalArgumentException("Illegal node type: " + node.getClass());
         }
         return nodeInstance;
     }
 
+    private NodeInstance buildCompositeNodeInstance(NodeInstanceImpl nodeInstance, Node node) {
+        nodeInstance.setNodeId(node.getId());
+        nodeInstance.setNodeInstanceContainer(this);
+        nodeInstance.setProcessInstance(getProcessInstance());
+        return nodeInstance;
+    }
+
     @Override
 	public void signalEvent(String type, Object event) {
-		List<NodeInstance> currentView = new ArrayList<NodeInstance>(this.nodeInstances);
+		List<NodeInstance> currentView = new ArrayList<>(this.nodeInstances);
 		super.signalEvent(type, event);
 		for (Node node: getCompositeNode().internalGetNodes()) {
 			if (node instanceof EventNodeInterface) {
 				if (((EventNodeInterface) node).acceptsEvent(type, event)) {
-					if (node instanceof EventNode && ((EventNode) node).getFrom() == null) {
+					if (node instanceof EventNode && ((EventNode) node).getFrom() == null || node instanceof EventSubProcessNode) {
 						EventNodeInstanceInterface eventNodeInstance = (EventNodeInstanceInterface) getNodeInstance(node);
 						eventNodeInstance.signalEvent(type, event);
-					} else if( node instanceof EventSubProcessNode ) {
-					    EventNodeInstanceInterface eventNodeInstance = (EventNodeInstanceInterface) getNodeInstance(node);
-					    eventNodeInstance.signalEvent(type, event);
 					} else {
 						List<NodeInstance> nodeInstances = getNodeInstances(node.getId(), currentView);
 						if (nodeInstances != null && !nodeInstances.isEmpty()) {
@@ -297,30 +292,26 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
 	}
 
 	public List<NodeInstance> getNodeInstances(final long nodeId) {
-		List<NodeInstance> result = new ArrayList<NodeInstance>();
-		for (final Iterator<NodeInstance> iterator = this.nodeInstances
-				.iterator(); iterator.hasNext();) {
-			final NodeInstance nodeInstance = iterator.next();
-			if (nodeInstance.getNodeId() == nodeId) {
-				result.add(nodeInstance);
-			}
-		}
+		List<NodeInstance> result = new ArrayList<>();
+        for (final NodeInstance nodeInstance : this.nodeInstances) {
+            if (nodeInstance.getNodeId() == nodeId) {
+                result.add(nodeInstance);
+            }
+        }
 		return result;
 	}
 
 	public List<NodeInstance> getNodeInstances(final long nodeId, List<NodeInstance> currentView) {
-		List<NodeInstance> result = new ArrayList<NodeInstance>();
-		for (final Iterator<NodeInstance> iterator = currentView
-				.iterator(); iterator.hasNext();) {
-			final NodeInstance nodeInstance = iterator.next();
-			if (nodeInstance.getNodeId() == nodeId) {
-				result.add(nodeInstance);
-			}
-		}
+		List<NodeInstance> result = new ArrayList<>();
+        for (final NodeInstance nodeInstance : currentView) {
+            if (nodeInstance.getNodeId() == nodeId) {
+                result.add(nodeInstance);
+            }
+        }
 		return result;
 	}
 
-    public class CompositeNodeStartInstance extends NodeInstanceImpl {
+    public static class CompositeNodeStartInstance extends NodeInstanceImpl {
 
         private static final long serialVersionUID = 510l;
 
@@ -334,7 +325,7 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
         }
 
         public void triggerCompleted() {
-            triggerCompleted(org.jbpm.workflow.core.Node.CONNECTION_DEFAULT_TYPE, true);
+            super.triggerCompleted(org.jbpm.workflow.core.Node.CONNECTION_DEFAULT_TYPE, true);
         }
 
     }
@@ -380,18 +371,15 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
 	public void nodeInstanceCompleted(NodeInstance nodeInstance, String outType) {
 	    Node nodeInstanceNode = nodeInstance.getNode();
 	    if( nodeInstanceNode != null ) {
-	        Object compensationBoolObj =  nodeInstanceNode.getMetaData().get("isForCompensation");
-	        boolean isForCompensation = compensationBoolObj == null ? false : ((Boolean) compensationBoolObj);
-	        if( isForCompensation ) {
-	            return;
-	        }
+	        Object compensationBoolObj =  nodeInstanceNode.getMetaData().get(IS_FOR_COMPENSATION);
+            if (compensationBoolObj != null && (Boolean) compensationBoolObj) {
+                return;
+            }
 	    }
 	    if (nodeInstance instanceof FaultNodeInstance || nodeInstance instanceof EndNodeInstance || nodeInstance instanceof EventSubProcessNodeInstance ) {
-            if (getCompositeNode().isAutoComplete()) {
-                if (nodeInstances.isEmpty()) {
-                    triggerCompleted(
-                        org.jbpm.workflow.core.Node.CONNECTION_DEFAULT_TYPE);
-                }
+            if (getCompositeNode().isAutoComplete() && nodeInstances.isEmpty()) {
+                triggerCompleted(org.jbpm.workflow.core.Node.CONNECTION_DEFAULT_TYPE);
+
             }
 	    } else {
     		throw new IllegalArgumentException(
@@ -401,7 +389,7 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
 
     public void setState(final int state) {
         this.state = state;
-        if (state == ProcessInstance.STATE_ABORTED) {
+        if (state == STATE_ABORTED) {
             cancel();
         }
     }
@@ -424,11 +412,10 @@ public class CompositeNodeInstance extends StateBasedNodeInstance implements Nod
 
     protected boolean useAsync(final Node node) {
         if (!(node instanceof EventSubProcessNode) && (node instanceof ActionNode || node instanceof StateBasedNode || node instanceof EndNode)) {  
-            boolean asyncMode = Boolean.parseBoolean((String)node.getMetaData().get("customAsync"));
+            boolean asyncMode = Boolean.parseBoolean((String)node.getMetaData().get(CUSTOM_ASYNC));
             if (asyncMode) {
-                return asyncMode;
+                return true;
             }
-            
             return Boolean.parseBoolean((String)getProcessInstance().getKnowledgeRuntime().getEnvironment().get("AsyncMode"));
         }
         
